--- a/slides/citations.bib
+++ b/slides/citations.bib
@@ -6,9 +6,12 @@
   month = nov,
   series = {Working {{Paper Series}}},
   number = {24003},
+  eprint = {24003},
   publisher = {{National Bureau of Economic Research}},
   doi = {10.3386/w24003},
+  urldate = {2023-02-06},
   abstract = {In empirical work in economics it is common to report standard errors that account for clustering of units. Typically, the motivation given for the clustering adjustments is that unobserved components in outcomes for units within clusters are correlated. However, because correlation may occur across more than one dimension, this motivation makes it difficult to justify why researchers use clustering in some dimensions, such as geographic, but not others, such as age cohorts or gender. This motivation also makes it difficult to explain why one should not cluster with data from a randomized experiment. In this paper, we argue that clustering is in essence a design problem, either a sampling design or an experimental design issue. It is a sampling design issue if sampling follows a two stage process where in the first stage, a subset of clusters were sampled randomly from a population of clusters, and in the second stage, units were sampled randomly from the sampled clusters. In this case the clustering adjustment is justified by the fact that there are clusters in the population that we do not see in the sample. Clustering is an experimental design issue if the assignment is correlated within the clusters. We take the view that this second perspective best fits the typical setting in economics where clustering adjustments are used. This perspective allows us to shed new light on three questions: (i) when should one adjust the standard errors for clustering, (ii) when is the conventional adjustment for clustering appropriate, and (iii) when does the conventional adjustment of the standard errors matter.},
+  archiveprefix = {National Bureau of Economic Research},
   file = {/Users/stijnmasschelein/Zotero/storage/AVD6KJLD/Abadie et al. - 2017 - When Should You Adjust Standard Errors for Cluster.pdf}
 }
 
@@ -34,10 +37,28 @@
   pages = {370--395},
   issn = {0304-405X},
   doi = {10.1016/j.jfineco.2022.01.004},
+  urldate = {2022-09-29},
   abstract = {We explain when and how staggered difference-in-differences regression estimators, commonly applied to assess the impact of policy changes, are biased. These biases are likely to be relevant for a large portion of research settings in finance, accounting, and law that rely on staggered treatment timing, and can result in Type-I and Type-II errors. We summarize three alternative estimators developed in the econometrics and applied literature for addressing these biases, including their differences and tradeoffs. We apply these estimators to re-examine prior published results and show, in many cases, the alternative causal estimates or inferences differ substantially from prior papers.},
   langid = {english},
   keywords = {Difference in differences,Dynamic treatment effects,Generalized difference-in-differences,Staggered difference-in-differences,Treatment effect heterogeneity},
   file = {/Users/stijnmasschelein/Zotero/storage/4REWDFMR/Baker et al. - 2022 - How much should we trust staggered difference-in-d.pdf;/Users/stijnmasschelein/Zotero/storage/GVZK7C9F/S0304405X22000204.html}
+}
+
+@article{ball1968,
+  title = {An {{Empirical Evaluation}} of {{Accounting Income Numbers}}},
+  author = {Ball, Ray and Brown, Philip},
+  year = {1968},
+  journal = {Journal of Accounting Research},
+  volume = {6},
+  number = {2},
+  eprint = {2490232},
+  eprinttype = {jstor},
+  pages = {159--178},
+  publisher = {{[Accounting Research Center, Booth School of Business, University of Chicago, Wiley]}},
+  issn = {0021-8456},
+  doi = {10.2307/2490232},
+  urldate = {2023-02-28},
+  file = {/Users/stijnmasschelein/Zotero/storage/IJYT2Z8W/Ball and Brown - 1968 - An Empirical Evaluation of Accounting Income Numbe.pdf}
 }
 
 @article{bennedsen2020,
@@ -51,9 +72,9 @@
   pages = {1877--1911},
   issn = {1540-6261},
   doi = {10.1111/jofi.12897},
+  urldate = {2023-02-13},
   abstract = {Using variation in firms' exposure to their CEOs resulting from hospitalization, we estimate the effect of chief executive officers (CEOs) on firm policies, holding firm-CEO matches constant. We document three main findings. First, CEOs have a significant effect on profitability and investment. Second, CEO effects are larger for younger CEOs, in growing and family-controlled firms, and in human-capital-intensive industries. Third, CEOs are unique: the hospitalization of other senior executives does not have similar effects on the performance. Overall, our findings demonstrate that CEOs are a key driver of firm performance, which suggests that CEO contingency plans are valuable.},
   langid = {english},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/jofi.12897},
   file = {/Users/stijnmasschelein/Zotero/storage/3C3JE8WX/Bennedsen et al. - 2020 - Do CEOs Matter Evidence from Hospitalization Even.pdf;/Users/stijnmasschelein/Zotero/storage/KSD3S6KZ/jofi.html}
 }
 
@@ -69,6 +90,7 @@
   pages = {581--593},
   issn = {0034-6535},
   doi = {10.1162/rest_a_00715},
+  urldate = {2019-03-19},
   abstract = {In speedboat racing in Japan, men and women compete under the same conditions and are randomly assigned to mixed-sex or single-sex groups for each race. We use a sample of over 140,000 individual-level records to examine how male-dominated circumstances affect women's racing performance. Our fixed-effects estimates reveal that women's race time is slower in mixed-sex than all-women races, whereas men's race time is faster in mixed-sex than men-only races. The same result is found for place in race. Moreover, in mixed-sex races, men are more aggressive, as proxied by lane changing, than women in spite of the risk of being penalized for rule infringement.},
   file = {/Users/stijnmasschelein/Zotero/storage/YCG8HD37/Booth and Yamamura - 2017 - Performance in Mixed-Sex and Single-Sex Competitio.pdf;/Users/stijnmasschelein/Zotero/storage/TZZZQV23/rest_a_00715.html}
 }
@@ -85,6 +107,7 @@
   pages = {200--230},
   issn = {0304-4076},
   doi = {10.1016/j.jeconom.2020.12.001},
+  urldate = {2023-02-07},
   abstract = {In this article, we consider identification, estimation, and inference procedures for treatment effect parameters using Difference-in-Differences (DiD) with (i) multiple time periods, (ii) variation in treatment timing, and (iii) when the ``parallel trends assumption'' holds potentially only after conditioning on observed covariates. We show that a family of causal effect parameters are identified in staggered DiD setups, even if differences in observed characteristics create non-parallel outcome dynamics between groups. Our identification results allow one to use outcome regression, inverse probability weighting, or doubly-robust estimands. We also propose different aggregation schemes that can be used to highlight treatment effect heterogeneity across different dimensions as well as to summarize the overall effect of participating in the treatment. We establish the asymptotic properties of the proposed estimators and prove the validity of a computationally convenient bootstrap procedure to conduct asymptotically valid simultaneous (instead of pointwise) inference. Finally, we illustrate the relevance of our proposed tools by analyzing the effect of the minimum wage on teen employment from 2001\textendash 2007. Open-source software is available for implementing the proposed methods.},
   langid = {english},
   keywords = {Difference-in-Differences,Doubly robust,Dynamic treatment effects,Event study,Semi-parametric,Treatment effect heterogeneity,Variation in treatment timing},
@@ -99,10 +122,10 @@
   number = {n/a},
   issn = {1475-679X},
   doi = {10.1111/1475-679X.12470},
+  urldate = {2023-02-13},
   abstract = {We analyze the standard error bias associated with the use of generated regressors\textemdash independent variables generated from first-step regressions\textemdash in accounting research settings. Under general conditions, generated regressors do not affect the consistency of coefficient estimates. However, commonly used generated regressors can cause standard errors to be understated. Problematic generated regressors include predicted values, coefficient estimates, and measures derived from these estimates. Widely used generated regressors in accounting include measures of earnings persistence, normal accruals, litigation risk, and conditional conservatism. Using simple regression models and simulation, we demonstrate how generated regressors can produce understated standard errors in accounting research settings. We also demonstrate how the magnitude of the standard error bias is inversely related to the precision of the generated regressor. Finally, we discuss bootstrapping as a correction for the bias and demonstrate the pairs cluster bootstrap as a tool to improve inferences in common accounting settings involving generated regressors.},
   langid = {english},
   keywords = {bootstrapping,earnings forecasts,financial reporting quality,generated regressor,investment,litigation risk,predicted values,standard error bias},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1475-679X.12470},
   file = {/Users/stijnmasschelein/Zotero/storage/DR8IA8HC/Chen et al. - Standard Error Biases When Using Generated Regress.pdf;/Users/stijnmasschelein/Zotero/storage/DMSS4TBA/1475-679X.html}
 }
 
@@ -116,10 +139,10 @@
   pages = {751--796},
   issn = {1475-679X},
   doi = {10.1111/1475-679X.12195},
+  urldate = {2023-02-13},
   abstract = {We analyze a procedure common in empirical accounting and finance research where researchers use ordinary least squares to decompose a dependent variable into its predicted and residual components and use the residuals as the dependent variable in a second regression. This two-step procedure is used to examine determinants of constructs such as discretionary accruals, real activities management, discretionary book-tax differences, and abnormal investment. We show that the typical implementation of this procedure generates biased coefficients and standard errors that can lead to incorrect inferences, with both Type I and Type II errors. We further show that the magnitude of the bias in coefficients and standard errors is a function of the correlations between model regressors. We illustrate the potential magnitude of the bias in accounting research in four commonly used settings. Our results indicate significant bias in many of these settings. We offer three solutions to avoid the bias.},
   langid = {english},
   keywords = {C18,coefficient bias,discretionary accruals,G10,G30,M40,M41,real earnings management,residuals,two-stage},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1475-679X.12195},
   file = {/Users/stijnmasschelein/Zotero/storage/CA52BKC3/Chen et al. - 2018 - Incorrect Inferences When Using Residuals as Depen.pdf;/Users/stijnmasschelein/Zotero/storage/PC3J2JT5/1475-679X.html}
 }
 
@@ -133,6 +156,7 @@
   pages = {97--104},
   issn = {1745-6622},
   doi = {10.1111/j.1745-6622.2005.00063.x},
+  urldate = {2019-02-22},
   abstract = {This article addresses four major concerns about the pay of U.S. CEOs: (1) failure to pay for performance; (2) excessive levels of pay; (3) failure to index options and other equity-based pay, resulting in windfalls; and (4) too much unwinding of incentives. The authors' main message is that most if not all of these concerns are exaggerated by the popular tendency to focus on the annual income of CEOs (consisting of salary, bonus, and stock and option grants) while ignoring their existing holdings of company equity. Taking into account the effect of stock price changes on CEO wealth leads the authors to a number of interesting conclusions. First, the pay-for-performance relationship is strong and has grown significantly in recent years. Second, what may appear as above-normal growth in annual pay levels may be necessary to compensate CEOs for the increased risk associated with their growing level of equity-based incentives. Third, conventional (that is, unindexed) stock and options, when viewed as a combination of market risk and firm-specific risk, may provide an optimal solution to two conflicting demands: shareholders' demand for executive rewards tied to company performance and executives' preference to diversify their wealth. Finally, there is little evidence of widespread CEO unwinding of incentives, and levels of CEO equity ownership in the U.S. remain impressively high.},
   langid = {english},
   file = {/Users/stijnmasschelein/Zotero/storage/2T6QYBQZ/Core et al. - 2005 - Is U.S. CEO Compensation Broken.pdf;/Users/stijnmasschelein/Zotero/storage/MI6SI4PH/j.1745-6622.2005.00063.html}
@@ -147,6 +171,7 @@
   journal = {Causal Inference},
   publisher = {{Yale University Press}},
   doi = {10.12987/9780300255881},
+  urldate = {2023-01-24},
   abstract = {An accessible and contemporary introduction to the methods for determining cause and effect in the social sciences},
   isbn = {978-0-300-25588-1},
   langid = {english},
@@ -163,9 +188,9 @@
   pages = {709--749},
   issn = {1540-6261},
   doi = {10.1111/j.1540-6261.2009.01447.x},
+  urldate = {2023-02-13},
   abstract = {Does limited attention among investors affect stock returns? We compare the response to earnings announcements on Friday, when investor inattention is more likely, to the response on other weekdays. If inattention influences stock prices, we should observe less immediate response and more drift for Friday announcements. Indeed, Friday announcements have a 15\% lower immediate response and a 70\% higher delayed response. A portfolio investing in differential Friday drift earns substantial abnormal returns. In addition, trading volume is 8\% lower around Friday announcements. These findings support explanations of post-earnings announcement drift based on underreaction to information caused by limited attention.},
   langid = {english},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-6261.2009.01447.x},
   file = {/Users/stijnmasschelein/Zotero/storage/DE8LGKZW/Dellavigna and Pollet - 2009 - Investor Inattention and Friday Earnings Announcem.pdf;/Users/stijnmasschelein/Zotero/storage/NEVJ738Z/j.1540-6261.2009.01447.html}
 }
 
@@ -179,9 +204,9 @@
   pages = {1029--1057},
   issn = {1540-6261},
   doi = {10.1111/j.1540-6261.1995.tb04049.x},
+  urldate = {2023-02-13},
   abstract = {We document that forced resignations of top managers are preceded by large and significant declines in operating performance and followed by large improvements in performance. However, forced resignations are rare and are due more often to external factors (e.g., blockholder pressure, takeover attempts, etc.) than to normal board monitoring. Following the management change, these firms significantly downsize their operations and are subject to a high rate of corporate control activity. Normal retirements are followed by small increases in operating income and are also subject to a slightly higher than normal incidence of postturnover corporate control activity.},
   langid = {english},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-6261.1995.tb04049.x},
   file = {/Users/stijnmasschelein/Zotero/storage/J6YYN9R9/Denis and Denis - 1995 - Performance Changes Following Top Management Dismi.pdf;/Users/stijnmasschelein/Zotero/storage/LCP257MF/j.1540-6261.1995.tb04049.html}
 }
 
@@ -207,6 +232,7 @@
   pages = {135--152},
   issn = {1945-7731, 1945-774X},
   doi = {10.1257/pol.20160365},
+  urldate = {2023-02-02},
   abstract = {It is found that electorally induced policy uncertainty decreases manufacturing investment in US states. In a state with average partisan polarization, the elasticity of election-year investment to a specific measure of policy uncertainty is -0.027. When the incumbent governor is term limited, there is greater uncertainty over the outcome, providing an instrument to demonstrate this effect is causal, not simply coincidental. Moreover, manufacturing investment does not rebound following the election. Rather, own-state uncertainty is associated with a large and significant coincident rise in neighboring states' investment. These findings suggest that policy uncertainty at the subnational level drives investment to alternate sites. (JEL D25, D72, E22, G31, L60, R11)},
   langid = {english},
   file = {/Users/stijnmasschelein/Zotero/storage/23VL5B7R/Falk and Shelton - 2018 - Fleeing a Lame Duck Policy Uncertainty and Manufa.pdf}
@@ -223,6 +249,7 @@
   pages = {661--675},
   issn = {1364-6613},
   doi = {10.1016/j.tics.2016.07.003},
+  urldate = {2023-02-15},
   abstract = {Financial decisions are among the most important life-shaping decisions that people make. We review facts about financial decisions and what cognitive and neural processes influence them. Because of cognitive constraints and a low average level of financial literacy, many household decisions violate sound financial principles. Households typically have underdiversified stock holdings and low retirement savings rates. Investors overextrapolate from past returns and trade too often. Even top corporate managers, who are typically highly educated, make decisions that are affected by overconfidence and personal history. Many of these behaviors can be explained by well-known principles from cognitive science. A boom in high-quality accumulated evidence\textendash especially how practical, low-cost `nudges' can improve financial decisions\textendash is already giving clear guidance for balanced government regulation.},
   langid = {english},
   keywords = {bubbles,decision making,finance,neuroeconomics,stock market,trading biases},
@@ -240,6 +267,7 @@
   pages = {3108--3139},
   issn = {0893-9454},
   doi = {10.1093/rfs/hhw010},
+  urldate = {2023-02-15},
   abstract = {We use neural data collected from an experimental asset market to measure regret preferences while subjects trade stocks. When subjects observe a positive return for a stock they chose not to purchase, a regret signal is observed in an area of the brain that is commonly active during reward processing. Subjects are unwilling to repurchase stocks that have recently increased in price, even though this is suboptimal in our experiment. The strength of stock repurchasing mistakes is correlated with the neural measures of regret. Subjects with high rates of repurchasing mistakes also exhibit large disposition effects.Received April 28, 2015; accepted January 26, 2016 by Editor Stefan Nagel.},
   file = {/Users/stijnmasschelein/Zotero/storage/AL6NUCSC/Frydman and Camerer - 2016 - Neural Evidence of Regret and Its Implications for.pdf;/Users/stijnmasschelein/Zotero/storage/QPRA7CKU/2583663.html}
 }
@@ -269,6 +297,7 @@
   pages = {653--691},
   issn = {0033-5533},
   doi = {10.1162/003355398555702},
+  urldate = {2019-02-22},
   abstract = {Abstract.  A common view is that there is little correlation between firm performance and CEO pay. Using a new fifteen-year panel data set of CEOs in the larges},
   langid = {english},
   file = {/Users/stijnmasschelein/Zotero/storage/VJZXIA7Y/Hall and Liebman - 1998 - Are CEOs Really Paid Like Bureaucrats.pdf;/Users/stijnmasschelein/Zotero/storage/ZMFIX4A4/1851126.html}
@@ -284,6 +313,7 @@
   publisher = {{Chapman and Hall/CRC}},
   address = {{Boca Raton}},
   doi = {10.1201/9781003226055},
+  urldate = {2023-01-23},
   isbn = {978-1-00-322605-5},
   langid = {english}
 }
@@ -299,6 +329,7 @@
   pages = {225--264},
   issn = {0022-3808},
   doi = {10.1086/261677},
+  urldate = {2019-02-22},
   abstract = {Our estimates of the pay-performance relation (including pay, options, stockholdings, and dismissal) for chief executive officers indicate that CEO wealth changes \$3.25 for every \$1,000 change in shareholder wealth. Although the incentives generated by stock ownership are large relative to pay and dismissal incentives, most CEOs hold trivial fractions of their firm's stock, and ownership levels have declined over the past 50 years. We hypothesize that public and private political forces impose constraints that reduce the pay-performance sensitivity. Declines in both the pay-performance relation and the level of CEO pay since the 1930s are consistent with this hypothesis.},
   file = {/Users/stijnmasschelein/Zotero/storage/PDXN49CM/Jensen and Murphy - 1990 - Performance Pay and Top-Management Incentives.pdf;/Users/stijnmasschelein/Zotero/storage/MPYRFVJK/261677.html}
 }
@@ -313,9 +344,9 @@
   pages = {2551--2588},
   issn = {1540-6261},
   doi = {10.1111/jofi.12545},
+  urldate = {2023-02-02},
   abstract = {We examine how an increase in stock option grants affects CEO risk-taking. The overall net effect of option grants is theoretically ambiguous for risk-averse CEOs. To overcome the endogeneity of option grants, we exploit institutional features of multiyear compensation plans, which generate two distinct types of variation in the timing of when large increases in new at-the-money options are granted. We find that, given average grant levels during our sample period, a 10\% increase in new options granted leads to a 2.8\% to 4.2\% increase in equity volatility. This increase in risk is driven largely by increased leverage.},
   langid = {english},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/jofi.12545},
   file = {/Users/stijnmasschelein/Zotero/storage/NQEQIXV7/Shue and Townsend - 2017 - How Do Quasi-Random Option Grants Affect CEO Risk-.pdf;/Users/stijnmasschelein/Zotero/storage/KQWUEIDM/jofi.html}
 }
 
@@ -330,6 +361,7 @@
   pages = {10503--10508},
   publisher = {{Proceedings of the National Academy of Sciences}},
   doi = {10.1073/pnas.1318416111},
+  urldate = {2023-02-15},
   abstract = {Groups of humans routinely misassign value to complex future events, especially in settings involving the exchange of resources. If properly structured, experimental markets can act as excellent probes of human group-level valuation mechanisms during pathological overvaluations\textemdash price bubbles. The connection between the behavioral and neural underpinnings of such phenomena has been absent, in part due to a lack of enabling technology. We used a multisubject functional MRI paradigm to measure neural activity in human subjects participating in experimental asset markets in which endogenous price bubbles formed and crashed. Although many ideas exist about how and why such bubbles may form and how to identify them, our experiment provided a window on the connection between neural responses and behavioral acts (buying and selling) that created the bubbles. We show that aggregate neural activity in the nucleus accumbens (NAcc) tracks the price bubble and that NAcc activity aggregated within a market predicts future price changes and crashes. Furthermore, the lowest-earning subjects express a stronger tendency to buy as a function of measured NAcc activity. Conversely, we report a signal in the anterior insular cortex in the highest earners that precedes the impending price peak, is associated with a higher propensity to sell in high earners, and that may represent a neural early warning signal in these subjects. Such markets could be a model system to understand neural and behavior mechanisms in other settings where emergent group-level activity exhibits mistaken belief or valuation.},
   file = {/Users/stijnmasschelein/Zotero/storage/GDJHM5SA/Smith et al. - 2014 - Irrational exuberance and neural crash warning sig.pdf}
 }
@@ -346,6 +378,7 @@
   pages = {175--199},
   issn = {0304-4076},
   doi = {10.1016/j.jeconom.2020.09.006},
+  urldate = {2023-02-06},
   abstract = {To estimate the dynamic effects of an absorbing treatment, researchers often use two-way fixed effects regressions that include leads and lags of the treatment. We show that in settings with variation in treatment timing across units, the coefficient on a given lead or lag can be contaminated by effects from other periods, and apparent pretrends can arise solely from treatment effects heterogeneity. We propose an alternative estimator that is free of contamination, and illustrate the relative shortcomings of two-way fixed effects regressions with leads and lags through an empirical application.},
   langid = {english},
   keywords = {Difference-in-differences,Pretrend test,Two-way fixed effects},
@@ -364,8 +397,25 @@
   pages = {642--668},
   issn = {0002-8282},
   doi = {10.1257/aer.98.3.642},
+  urldate = {2019-02-19},
   abstract = {This paper presents an assignment model of CEOs and firms. The distributions of CEO pay levels and firms' market values are analyzed as the competitive equilibrium of a matching market where talents, as well as CEO positions, are scarce. It is shown how the observed joint distribution of CEO pay and market value can then be used to infer the economic value of underlying ability differences. The variation in CEO pay is found to be mostly due to variation in firm characteristics, whereas implied differences in managerial ability are small and make relatively little difference to shareholder value.},
   langid = {english},
   keywords = {Capital and Ownership Structure; Firm Performance: Size; Diversification; and Scope; Personnel Management,executive compensation; Personnel Economics: Compensation and Compensation Methods and Their Effects,Financial Risk and Risk Management,Financing Policy},
   file = {/Users/stijnmasschelein/Zotero/storage/THU9E88J/Tervio - 2008 - The Difference That CEOs Make An Assignment Model.pdf;/Users/stijnmasschelein/Zotero/storage/N8PPF5M5/articles.html}
+}
+
+@article{wickham2014,
+  title = {Tidy Data},
+  author = {Wickham, Hadley},
+  year = {2014},
+  journal = {Journal of Statistical Software},
+  volume = {59},
+  number = {10},
+  pages = {1--23},
+  issn = {15487660},
+  doi = {10.18637/jss.v059.i10},
+  abstract = {A huge amount of effort is spent cleaning data to get it ready for analysis, but there has been little research on how to make data cleaning as easy and effective as possible. This paper tackles a small, but important, component of data cleaning: data tidying. Tidy datasets are easy to manipulate, model and visualize, and have a specific structure: each variable is a column, each observation is a row, and each type of observational unit is a table. This framework makes it easy to tidy messy datasets because only a small set of tools are needed to deal with a wide range of un-tidy datasets. This structure also makes it easier to develop tidy tools for data analysis, tools that both input and output tidy datasets. The advantages of a consistent data structure and matching tools are demonstrated with a case study free from mundane data manipulation chores.},
+  pmid = {18291371},
+  keywords = {data cleaning,data tidying,R,relational databases},
+  file = {/Users/stijnmasschelein/Zotero/storage/MZA8VQBD/tidy.pdf}
 }
